# hvif-tools

./: .gitmodules  CMakeLists.txt  README.md
cmake/: BuildInfo.cmake  CompilerSettings.cmake  Dependencies.cmake  InstallRules.cmake  NSISConfig.cmake  hviftools-config.cmake.in  imagetracer-config.cmake.in
inkscape/: CMakeLists.txt  hvif_input.inx  hvif_input.py  hvif_output.inx  hvif_output.py  iom_input.inx  iom_input.py  iom_output.inx  iom_output.py
installer/: hvif-tools.iom
src/: CMakeLists.txt
src/addons/: CMakeLists.txt
src/addons/windows/: CMakeLists.txt  ClassFactory.cpp  ClassFactory.h  HVIFThumbnailProvider.cpp  HVIFThumbnailProvider.def  HVIFThumbnailProvider.h
src/common/: BMessage.cpp  BMessage.h  CMakeLists.txt  HVIFStructures.h  HaikuIcon.h  IOMStructures.h  IconAdapter.cpp  IconAdapter.h  IconConverter.cpp  IconConverter.h  Utils.h
src/export/: CMakeLists.txt  HVIFWriter.cpp  HVIFWriter.h  IOMWriter.cpp  IOMWriter.h  PNGWriter.cpp  PNGWriter.h  SVGWriter.cpp  SVGWriter.h
src/hvif2svg/: CMakeLists.txt  HVIFParser.cpp  HVIFParser.h  SVGRenderer.cpp  SVGRenderer.h  hvif2svg.cpp
src/hvif4win/: CMakeLists.txt  DllMain.cpp  Globals.h  HVIFThumbnailProvider.cpp
src/img2svg/: CMakeLists.txt  img2svg.cpp
src/img2svg/core/: BitmapData.cpp  BitmapData.h  ImageTracer.cpp  ImageTracer.h  IndexedBitmap.cpp  IndexedBitmap.h  TracingOptions.cpp  TracingOptions.h  VectorizationProgress.h
src/img2svg/output/: SvgWriter.cpp  SvgWriter.h
src/img2svg/processing/: BackgroundRemover.cpp  BackgroundRemover.h  GeometryDetector.cpp  GeometryDetector.h  GradientDetector.cpp  GradientDetector.h  PathHierarchy.cpp  PathScanner.cpp  PathScanner.h  PathSimplifier.cpp  PathSimplifier.h  PathTracer.cpp  PathTracer.h  RegionMerger.cpp  RegionMerger.h  SelectiveBlur.cpp  SelectiveBlur.h  SharedEdgeRegistry.h  VisvalingamWhyatt.cpp  VisvalingamWhyatt.h
src/img2svg/quantization/: ColorCube.cpp  ColorCube.h  ColorNode.cpp  ColorNode.h  ColorQuantizer.cpp  ColorQuantizer.h
src/img2svg/utils/: MathUtils.h
src/import/: CMakeLists.txt  HVIFParser.cpp  HVIFParser.h  IOMParser.cpp  IOMParser.h  PNGParser.cpp  PNGParser.h  SVGParser.cpp  SVGParser.h
src/iom2hvif/: iom2hvif.cpp
src/iom2hvif/core/: IconBuild.h  Shape.h  Style.h  Transformable.cpp
src/iom2hvif/format/: FlatIconFormat.cpp  LittleEndianBuffer.cpp  LittleEndianBuffer.h  PathCommandQueue.cpp
src/iom2hvif/io/: FlatIconExporter.h
src/iom2svg/: CMakeLists.txt  IOMParser.cpp  IOMParser.h  SVGRenderer.cpp  SVGRenderer.h  iom2svg.cpp
src/message/: message.cpp
src/msg2txt/: CMakeLists.txt  msg2txt.cpp
src/svg2hvif/: CMakeLists.txt  HVIFWriter.cpp  HVIFWriter.h  SVGParser.cpp  SVGParser.h  svg2hvif.cpp
src/svg2iom/: CMakeLists.txt  IOMWriter.cpp  IOMWriter.h  SVGParser.cpp  SVGParser.h  svg2iom.cpp
src/tests/: CMakeLists.txt
src/tests/stress/: CMakeLists.txt  stress.cpp
src/tools/: CMakeLists.txt
src/tools/icon2icon/: CMakeLists.txt  icon2icon.cpp
src/tools/img2svg/: CMakeLists.txt  img2svg.cpp
src/tools/iom2hvif/: CMakeLists.txt
src/tools/iom2hvif/core/: Container.h  Icon.cpp  Icon.h  Shape.cpp  Style.cpp  Transformable.h  VectorPath.cpp  VectorPath.h
src/tools/iom2hvif/format/: FlatIconFormat.h  PathCommandQueue.h
src/tools/iom2hvif/io/: FlatIconExporter.cpp  MessageImporter.cpp  MessageImporter.h
src/tools/iom2hvif/transform/: Transformers.cpp  Transformers.h
src/tools/msgdump/: CMakeLists.txt  msgdump.cpp
src/tracer/: CMakeLists.txt
src/tracer/core/: BitmapData.h  ImageTracer.cpp  ImageTracer.h  IndexedBitmap.cpp  IndexedBitmap.h  TracingOptions.cpp
src/tracer/output/: SvgWriter.cpp  SvgWriter.h
src/tracer/processing/: BackgroundRemover.h  GeometryDetector.cpp  GradientDetector.cpp  PathHierarchy.cpp  PathHierarchy.h  PathScanner.cpp  PathSimplifier.h  PathTracer.cpp  SelectiveBlur.cpp  SelectiveBlur.h  SharedEdgeRegistry.cpp  VisvalingamWhyatt.cpp
src/tracer/quantization/: ColorNode.cpp  ColorNode.h
src/tracer/utils/: MathUtils.cpp  ParallelUtils.h
